<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools" android:layout_width="match_parent"
    android:layout_height="match_parent" android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:background="@drawable/add"
    tools:context="com.samhith.olarounds.Sign_up">
<TextView
    android:layout_width="match_parent"
    android:layout_height="100dp"
    android:textSize="@dimen/abc_action_bar_stacked_max_height"
    android:text="@string/sin"
    android:textAlignment="gravity"
    android:gravity="center"

    android:fontFamily="@string/abc_activity_chooser_view_see_all"
    />
   <EditText
       android:layout_width="match_parent"
       android:layout_height="wrap_content"
       android:id="@+id/name"
       android:layout_centerInParent="true"
       android:inputType="text"
       android:text="@string/name" />
<EditText
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:id="@+id/pass1"
    android:inputType="textPassword"
    android:layout_centerVertical="true"
    android:layout_alignParentStart="true"
    android:layout_below="@+id/name"
    android:hint="@string/pass12" />

    <EditText
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:inputType="phone"
        android:ems="10"
        android:id="@+id/phone"
        android:layout_alignParentStart="true"
        android:layout_marginTop="39dp"
        android:text="@string/ph"
        android:layout_below="@+id/pass1"
        android:layout_alignEnd="@+id/pass1" />

    <EditText
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:inputType="textEmailAddress"
        android:ems="10"
        android:id="@+id/editText2"
        android:layout_below="@+id/phone"
        android:layout_alignParentStart="true"
        android:hint="@string/pass"
        android:layout_alignEnd="@+id/phone"
        android:text="@string/email" />

    <EditText
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:inputType="textPassword"
        android:ems="10"
        android:id="@+id/password"
        android:layout_below="@+id/pass1"
        android:layout_alignParentStart="true"
        android:layout_alignEnd="@+id/phone"
        android:hint="@string/confirm" />

    <Button
        style="?android:attr/buttonStyleSmall"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/done1"
        android:id="@+id/done"
        android:layout_below="@+id/editText2"
        android:layout_alignParentStart="true" />

    <Button
        style="?android:attr/buttonStyleSmall"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/back"
        android:id="@+id/button2"
        android:layout_alignTop="@+id/done"
        android:layout_alignParentEnd="true" />

</RelativeLayout>
