<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools" android:layout_width="match_parent"
    android:layout_height="match_parent" android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    android:paddingBottom="@dimen/activity_vertical_margin" tools:context=".OlaRounds"
    android:id="@+id/linear"
    android:background="@drawable/add"
    android:weightSum="1">

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_alignParentTop="true"
        android:text="@string/heading"
        android:textColor="#d3d3d3"
        android:textSize="@dimen/abc_action_bar_default_height_material"
        android:fontFamily="@string/abc_action_bar_home_description_format" />

    <EditText
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_centerInParent="true"
        android:text="@string/login_id"
        android:textAlignment="center"
        android:gravity="center"
        android:id="@+id/login_id"
        android:inputType="text"
        android:textColor="#00ffff"
        android:textIsSelectable="false" />

    <EditText
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/password"
        android:inputType="textPassword"
        android:id="@+id/pass"
        android:textColor="#00ffff"
        android:textAlignment="gravity"
        android:gravity="center"
        android:layout_below="@+id/login_id"
        android:layout_alignParentStart="true" />

    <Button
        android:layout_width="100dp"
        android:layout_height="50dp"
        android:gravity="center"
        android:textColor="#00ffff"
        android:text="@string/login_button"
        android:id="@+id/but1"
        android:background="#ffffff"
        android:layout_marginStart="52dp"
        android:layout_alignParentBottom="true"
        android:layout_alignParentStart="true"
        android:layout_marginBottom="61dp" />

    <Button
        style="?android:attr/buttonStyleSmall"
        android:layout_width="100dp"
        android:layout_height="50dp"
        android:text="@string/sign_up"
        android:id="@+id/button"
        android:background="#ffffff"
        android:textColor="#00ffff"
        android:layout_alignTop="@+id/but1"
        android:layout_toEndOf="@+id/but1"
        android:layout_marginStart="49dp" />

</RelativeLayout>
